--- a/Crystallum/Properties/Resources.resx
+++ b/Crystallum/Properties/Resources.resx
@@ -120,8 +120,20 @@
   <data name="AppName" xml:space="preserve">
     <value>Crystallum</value>
   </data>
+  <data name="Circle" xml:space="preserve">
+    <value>Circle</value>
+  </data>
+  <data name="CircleDimensions" xml:space="preserve">
+    <value>Dimensions (DxH)</value>
+  </data>
   <data name="InvalidDimensionsError" xml:space="preserve">
     <value>Please specify valid part dimensions</value>
+  </data>
+  <data name="Rect" xml:space="preserve">
+    <value>Rect</value>
+  </data>
+  <data name="RectDimensions" xml:space="preserve">
+    <value>Dimensions (LxBxH)</value>
   </data>
   <data name="SaveGeneratedProgram" xml:space="preserve">
     <value>Save generated program</value>
